@@ -110,14 +110,16 @@ static void	disconnect_proxy(zbx_socket_t *sock)
  *                                                                            *
  * Purpose: get historical data from proxy                                    *
  *                                                                            *
- * Parameters:                                                                *
+ * Parameters: proxy   - [IN] proxy data                                      *
+ *             request - [IN] requested data type                             *
+ *             data    - [OUT] data received from proxy                       *
+ *             ts      - [OUT] timestamp when the proxy connection was        *
+ *                             established                                    *
  *                                                                            *
  * Return value: SUCCESS - processed successfully                             *
  *               FAIL - an error occurred                                     *
  *                                                                            *
  * Author: Alexander Vladishev                                                *
- *                                                                            *
- * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
 static int	get_data_from_proxy(DC_PROXY *proxy, const char *request, char **data, zbx_timespec_t *ts)
@@ -140,9 +142,13 @@ static int	get_data_from_proxy(DC_PROXY *proxy, const char *request, char **data
 			zbx_timespec(ts);
 
 		if (SUCCEED == (ret = send_data_to_proxy(proxy, &s, j.buffer)))
+		{
 			if (SUCCEED == (ret = recv_data_from_proxy(proxy, &s)))
+			{
 				if (SUCCEED == (ret = zbx_send_response(&s, SUCCEED, NULL, 0)))
 					*data = zbx_strdup(*data, s.buffer);
+			}
+		}
 
 		disconnect_proxy(&s);
 	}
@@ -178,7 +184,7 @@ static int	process_proxy(void)
 	struct zbx_json_parse	jp, jp_data;
 	zbx_socket_t		s;
 	char			*answer = NULL, *port = NULL;
-	time_t			now;
+	time_t			now, last_access;
 	unsigned char		update_nextcheck;
 	zbx_timespec_t		ts;
 
@@ -194,6 +200,7 @@ static int	process_proxy(void)
 	for (i = 0; i < num; i++)
 	{
 		update_nextcheck = 0;
+		last_access = 0;
 
 		if (proxy.proxy_config_nextcheck <= now)
 			update_nextcheck |= 0x01;
@@ -252,6 +259,8 @@ static int	process_proxy(void)
 
 			if (SUCCEED != ret)
 				goto network_error;
+
+			last_access = time(NULL);
 		}
 
 		if (proxy.proxy_data_nextcheck <= now)
@@ -269,7 +278,10 @@ static int	process_proxy(void)
 				}
 
 				if (SUCCEED == zbx_json_open(answer, &jp))
+				{
+					last_access = time(NULL);
 					process_host_availability(&jp);
+				}
 
 				zbx_free(answer);
 			}
@@ -290,6 +302,8 @@ retry_history:
 
 				if (SUCCEED == zbx_json_open(answer, &jp))
 				{
+					last_access = time(NULL);
+
 					process_hist_data(NULL, &jp, proxy.hostid, &ts, NULL);
 
 					if (SUCCEED == zbx_json_brackets_by_name(&jp, ZBX_PROTO_TAG_DATA, &jp_data))
@@ -321,6 +335,8 @@ retry_dhistory:
 
 				if (SUCCEED == zbx_json_open(answer, &jp))
 				{
+					last_access = time(NULL);
+
 					process_dhis_data(&jp);
 
 					if (SUCCEED == zbx_json_brackets_by_name(&jp, ZBX_PROTO_TAG_DATA, &jp_data))
@@ -352,6 +368,8 @@ retry_autoreg_host:
 
 				if (SUCCEED == zbx_json_open(answer, &jp))
 				{
+					last_access = time(NULL);
+
 					process_areg_data(&jp, proxy.hostid);
 
 					if (SUCCEED == zbx_json_brackets_by_name(&jp, ZBX_PROTO_TAG_DATA, &jp_data))
@@ -369,11 +387,14 @@ retry_autoreg_host:
 			else
 				goto network_error;
 		}
-
-		DBbegin();
-		update_proxy_lastaccess(proxy.hostid);
-		DBcommit();
 network_error:
+		if (0 != last_access)
+		{
+			DBbegin();
+			update_proxy_lastaccess(proxy.hostid, last_access);
+			DBcommit();
+		}
+
 		DCrequeue_proxy(proxy.hostid, update_nextcheck);
 	}
 
